--- a/.github/workflows/main_cc-team12-fe.yml
+++ b/.github/workflows/main_cc-team12-fe.yml
@@ -28,6 +28,8 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+        env:
+          API_BASE_URL: ${{ secrets.API_BASE_URL }}
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
